navbar overflow fix

--- a/client/components/Navbar/Navbar.scss
+++ b/client/components/Navbar/Navbar.scss
@@ -151,7 +151,7 @@ $font-color: #fff;
         width: 100%;
 
         position: absolute;
-        left: 100%;
+        left: 101%;
         top: $navbar-height + (2 * $navbar-vpadding);
 
         .navbar-link-container {
