--- a/client/modules/About/About.scss
+++ b/client/modules/About/About.scss
@@ -8,6 +8,8 @@ $img-width: 700px;
 	height: 100%;
 	width: 100%;
 
+  overflow: hidden;
+
   .sponsorContainer {
     display: flex;
     justify-content: space-between;
