--- a/client/modules/Challenges/Challenges.scss
+++ b/client/modules/Challenges/Challenges.scss
@@ -4,6 +4,8 @@
   width: 100%;
   height: 100%;
 
+  overflow: hidden;
+
   .info {
     width: 80%;
     margin: 0 auto;
