--- a/client/modules/DesignBrief/DesignBrief.scss
+++ b/client/modules/DesignBrief/DesignBrief.scss
@@ -13,6 +13,8 @@
 	height: 100%;
 	width: 100%;
 
+	overflow: hidden;
+
 	.contentContainer {
 		$content-width: 80%;
 
