--- a/client/modules/FAQ/FAQ.scss
+++ b/client/modules/FAQ/FAQ.scss
@@ -16,4 +16,6 @@
     padding-bottom: 40px;
   }
 
+  overflow: hidden;
+
 }
