--- a/client/modules/Landing/Landing.scss
+++ b/client/modules/Landing/Landing.scss
@@ -3,4 +3,6 @@
 .landing {
   width: 100%;
   height: 100%;
+
+  overflow: hidden;
 }
