--- a/client/modules/Resources/Resources.scss
+++ b/client/modules/Resources/Resources.scss
@@ -16,4 +16,6 @@
       justify-content: space-around;
     }
   }
+
+  overflow: hidden;
 }
