--- a/client/modules/Sponsors/Sponsors.scss
+++ b/client/modules/Sponsors/Sponsors.scss
@@ -9,4 +9,6 @@
     margin: 0 auto;
   }
 
+  overflow: hidden;
+
 }
